--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:angular-structure-template": "node dist/angular-structure-template/server/server.mjs"
+    "build:client:watch": "ng build --watch",
+    "build:server:watch": "tsc --project tsconfig.server.json --watch",
+    "serve:ssr": "nodemon dist/angular-structure-template/server/server.mjs",
+    "ssr:watch": "concurrently \"npm run build:client:watch\" \"npm run build:server:watch\" \"npm run serve:ssr\"",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage"
   },
   "private": true,
   "dependencies": {
@@ -28,14 +33,14 @@
     "@angular/cli": "^20.0.1",
     "@angular/compiler-cli": "^20.0.0",
     "@types/express": "^5.0.1",
-    "@types/jasmine": "~5.1.0",
+    "@types/jest": "30.0.0",
     "@types/node": "^20.17.19",
-    "jasmine-core": "~5.7.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "concurrently": "^9.2.0",
+    "jest": "29.7.0",
+    "jest-preset-angular": "14.6.0",
+    "nodemon": "^3.1.10",
+    "ts-jest": "^29.4.0",
+    "ts-node": "10.9.2",
     "typescript": "~5.8.2"
   }
 }
